--- a/style.css
+++ b/style.css
@@ -1,79 +1,96 @@
-@font-face {
-  font-family: "Montserrat";
-  src: url("https://fonts.googleapis.com/css?family=Montserrat:900|Work+Sans:300"); }
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400&display=swap');
+
 @keyframes fadeIn {
   from {
-    opacity: 0; }
+    opacity: 0;
+  }
   to {
-    opacity: 1; } }
+    opacity: 1;
+  }
+}
+
 #page1, #page2, #page3, #page4 {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+}
 
 * {
-  padding: 0px;
-  margin: 0px;
-  background-color: #F1F4F6; }
+  color: #000000;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+#page1 {
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  overflow: hidden;
+  position: absolute;
+  z-index: 1;
+  background-color: #F1F4F6;
+}
+
+.splash-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.splash-blob {
+  z-index: -1;
+  display: flex;
+  margin-top: -330px;
+  margin-left: -195px;
+  overflow: visible;
+}
+
+.greeting {
+  font-size: 20px;
+  text-align: center;
+}
 
 .line {
   display: inline-block;
-  border-bottom: 1px solid #28292A;
-  line-height: 0; }
-
-.center {
-  position: absolute;
-  width: 300px;
-  height: 150px;
-  /* width / 2 */
-  top: 44%;
-  left: 50%;
-  margin-left: -150px;
-  /* margin is -0.5 * dimension (match with height to center) */
-  margin-top: -25px; }
+  border-bottom: 1px solid #000000;
+  line-height: 0;
+  width: 17.5px;
+  margin-bottom: 10px;
+}
 
 .info {
-  font-size: 75%;
-  width: 500px;
-  margin-left: -100px;
-  margin-top: 10px; }
-
-.splash-page {
-  color: #28292A;
-  text-align: center;
-  font-family: 'Monsterrat', sans-serif;
-  font-weight: 500; }
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+  gap: 7.5px;
+}
 
 .button {
   background: none;
-  border: none; }
+  border: none;
+  padding: 0px;
+}
 
 .fadeInAnimated {
   opacity: 0;
   animation: fadeIn 1s forwards;
-  /* forwards (animation-fill-mode) retains the style from the last keyframe when the animation ends */ }
+}
 
 .fab {
   color: #000000;
   font-size: 30px;
-  padding: 8px; }
+}
 
 .delay1 {
-  animation-delay: .55s; }
-
-/*
-.delay2 {
-    animation-delay: .45s;
+  animation-delay: .55s;
 }
-*/
+
 .delay3 {
-  animation-delay: .85s; }
+  animation-delay: .85s;
+}
 
-#contact {
+.contact {
   background: transparent;
-  margin-top: 12px; }
-
-#page1 {
-  background-color: #F1F4F6;
-  font-size: 120%; }
-
-/*# sourceMappingURL=style.css.map */
+  display: flex;
+  gap: 16px;
+}
